Enhance ToolCraft module: add author info to Invoke-ToolCraftInfo, improve Invoke-ToolCraftSetup with detailed installation steps for winget and astral-sh.uv, and update VS Code tasks to reflect function renaming. Add .gitignore and .python-version files for toolcraft-win, along with initial README and configuration files.

--- a/.ps_gallery/ToolCraft/toolcraft-win/pyproject.toml
+++ b/.ps_gallery/ToolCraft/toolcraft-win/pyproject.toml
@@ -1,12 +1,7 @@
 [project]
-name = "toolcraft"
+name = "toolcraft-win"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = []
-
-[tool.uv.workspace]
-members = [
-    ".ps_gallery/ToolCraft",
-]
