Enhance documentation and build tools: update CONTRIBUTING.md and README.md with new build commands, improve build_tools.py for better command handling, and add Flake8 configuration to pyproject.toml.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -194,3 +194,17 @@ dev = [
     "isort>=6.0.1",
     "mypy>=1.17.1",
 ]
+
+# Flake8 configuration
+[tool.flake8]
+max-line-length = 88
+extend-ignore = ["E203", "W503"]
+exclude = [
+    ".git",
+    "__pycache__",
+    ".venv",
+    "venv",
+    "build",
+    "dist",
+    "*.egg-info",
+]
