--- a/pyproject.toml
+++ b/pyproject.toml
@@ -57,11 +57,15 @@ dev = [
 ]
 docs = [
     "hf-doc-builder>=0.5.0",
+    "watchdog",
 ]
 test = [
     "pytest>=7.0.0",
     "pytest-cov>=4.0.0",
     "pytest-xdist>=3.0.0",
+]
+all = [
+    "toolcraft[dev,docs,test]",
 ]
 
 [project.scripts]
