feat: Implement Contributor License Agreement (CLA) enforcement
- Added Contributor License Agreement (CLA) requirement for all contributions.
- Introduced GitHub Action workflow for automatic CLA enforcement.
- Updated pull request template to include CLA acknowledgment.
- Changed project license from MIT to BSD 3-Clause License.
- Updated documentation to reflect CLA requirements and new license.
- Removed outdated TODO and documentation files.
- Created setup scripts for initializing CLA signatures branch.
- Added development notes for internal use.

--- a/docs/_toctree.yml
+++ b/docs/_toctree.yml
@@ -31,3 +31,5 @@
     title: Contributing Guide
   - local: changelog
     title: Changelog
+  - local: development-notes
+    title: Development Notes
