--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -27,17 +27,17 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Set up Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: '3.9'
-
       - name: Install uv
         uses: astral-sh/setup-uv@v3
+        with:
+          version: "latest"
+          enable-cache: true
 
-      - name: Install dependencies and build documentation
-        run: |
-          uv run doc-builder build toolcraft docs --build_dir build/docs
+      - name: Install dependencies
+        run: uv sync --all-extras
+
+      - name: Build documentation
+        run: uv run build-tools docs
 
       - name: Setup Pages
         if: github.ref == 'refs/heads/main'
